--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "^3.1.2"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "aws s3 sync build/ s3://linedrivebetting-bucket --acl public-read",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
