--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "aws s3 sync build/ s3://linedrivebetting-bucket --acl public-read",
+    "deploy": "aws s3 sync build/ s3://linedrivebetting.com --acl public-read",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
