--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "boostrap": "^2.0.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "4.0.0-alpha.6",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
