--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "yarn": "^1.19.1"
