--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-chat-widget": "^2.1.5",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
