--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.10.2",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
