--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "assert": "^2.0.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-chat-widget": "^2.1.5",
     "react-chartjs-2": "^2.8.0",
+    "react-chat-widget": "^2.1.5",
     "react-dom": "^16.10.2",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
@@ -37,5 +38,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/register": "^7.6.2",
+    "chai": "^4.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "jsdom": "^15.2.0",
+    "mocha": "^6.2.2"
   }
 }
