--- a/login-api/package.json
+++ b/login-api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-serverless-express": "^3.3.6",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.5"
   }
