--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "react": "^16.10.2",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-chartjs-2": "^2.8.0",
     "react-chat-widget": "^2.1.5",
