Phase 3: Finished search functionality for all three league games

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "query-string": "^6.9.0",
     "react": "^16.10.2",
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.14",
